<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:id="@+id/clock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/init_time"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/init_date"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="60"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prevWord"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_chevron_left_black_24dp" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/grade1"
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/grade2"
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/grade3"
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/grade4"
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/grade5"
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/grade6"
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/grade7"
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/wordView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/speechButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/ic_volume_up_black_24dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/meaningView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:padding="5dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/knowButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/normal_button"
                    android:text="@string/iknow"
                    android:textColor="@color/colorPrimaryText" />

                <Button
                    android:id="@+id/dontknowButton"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/normal_button2"
                    android:text="@string/dontknow"
                    android:textColor="@color/red" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/nextWord"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_chevron_right_black_24dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/unlockHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="2"
        android:text="@string/hint_lockscreen"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />

    <Button
        android:id="@+id/unlockButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_lock_open_black_24dp" />

</LinearLayout>